# Miser

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/miser/: main.go
docs/: architecture.md
examples/: ccusage.json  invoice.csv  llm_calls.jsonl
internal/miser/: analyze.go  apply.go  audit.go  audit_test.go  console.go  filter.go  fingerprint.go  importers.go  io.go  models.go  plan.go  pricing.go  proxy.go  pull.go  reconcile.go  rules.go  web.go
miser/: __init__.py  __main__.py  analyzer.py  audit.py  cli.py  fingerprint.py  importers.py  io.py  models.py  routes.py
tests/: test_analyzer.py
