[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miser-ai"
version = "0.1.0"
description = "Open-source AI spend compiler: find repeated expensive LLM calls and turn them into cheaper workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Miser contributors" }]
keywords = ["llm", "ai", "cost", "observability", "routing", "cache", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
miser = "miser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["miser*"]
